# polyfem

./: .gitignore  CMakeLists.txt  Dockerfile  codecov.yml
.github/workflows/: artifacts.yml  continuous.yml  coverage.yml  docker.yaml  nightly.yml
app/: CMakeLists.txt
app/cmake/: sign_macos_bundle.cmake
app/resources/: DS_Store  Info.plist
cmake/patches/: igl_patch.patch
cmake/recipes/: hocgv_miso.cmake  libigl.cmake  polyfem_data.cmake  polysolve.cmake  pybind11.cmake
json-specs/: elastic-material-parameters.json  input-spec.json  material-parameters.json  value.json
src/polyfem/: State.cpp  State.hpp  main.cpp
src/polyfem/assembler/: Assembler.cpp  AssemblerUtils.cpp  AssemblerUtils.hpp  CMakeLists.txt  GenericElastic.cpp  GenericProblem.cpp  GenericProblem.hpp  InversionBarrier.cpp  InversionBarrier.hpp  Mass.cpp  Mass.hpp  MatParams.cpp  MatParams.hpp  ModifiedNeoHookeanElasticity.cpp  ModifiedNeoHookeanElasticity.hpp  NeoHookeanElasticity.cpp  Problem.hpp  RhsAssembler.cpp  SumModel.cpp
src/polyfem/io/: MshReader.cpp  MshReader.hpp  OutData.cpp
src/polyfem/legacy/: State.cpp  State.hpp
src/polyfem/legacy/state/: CMakeLists.txt  StateHomogenization.cpp  StateSolveLinear.cpp  StateSolveNonlinear.cpp  StateSolveOperatorSplitting.cpp
src/polyfem/mesh/: GeometryReader.cpp  Mesh.cpp  Obstacle.cpp
src/polyfem/optimization/: AdjointTools.cpp
src/polyfem/optimization/force_derivatives/: BodyForceDerivative.cpp  ElasticForceDerivative.cpp  InertiaForceDerivative.cpp  PressureForceDerivative.cpp  TangentialAdhesionForceDerivative.cpp
src/polyfem/optimization/forms/: AMIPSForm.cpp
src/polyfem/problem/: NodeProblem.cpp  NodeProblem.hpp  PointBasedProblem.cpp  PointBasedProblem.hpp
src/polyfem/solver/: ALSolver.cpp  CMakeLists.txt  NLProblem.cpp  NLProblem.hpp  SolveData.cpp
src/polyfem/solver/forms/: BarrierContactForm.cpp  BarrierContactForm.hpp  BodyForm.cpp  BodyForm.hpp  CMakeLists.txt  ContactForm.cpp  ContactForm.hpp  ElasticForm.cpp  ElasticForm.hpp  Form.hpp  FrictionForm.cpp  FrictionForm.hpp  InertiaForm.cpp  InertiaForm.hpp  NavierStokesForm.cpp  NavierStokesForm.hpp  NormalAdhesionForm.cpp  NormalAdhesionForm.hpp  PeriodicContactForm.cpp  PeriodicContactForm.hpp  PressureForm.cpp  PressureForm.hpp  SmoothContactForm.cpp  SmoothContactForm.hpp  StackedForm.cpp  StackedForm.hpp  TangentialAdhesionForm.cpp  TangentialAdhesionForm.hpp
src/polyfem/solver/forms/lagrangian/: BCLagrangianForm.cpp  BCLagrangianForm.hpp
src/polyfem/state/: StateInit.cpp  StateSolveNonlinear.cpp
src/polyfem/time_integrator/: ImplicitTimeIntegrator.cpp  ImplicitTimeIntegrator.hpp
src/polyfem/utils/: ElasticityUtils.cpp  ExpressionValue.cpp  ExpressionValue.hpp  Jacobian.cpp  Jacobian.hpp  Selection.cpp  Selection.hpp
src/polyfem/varforms/: BilaplacianVarForm.cpp  FluidVarForm.cpp  FluidVarForm.hpp  IncompressibleElasticVarForm.cpp  LinearElasticVarForm.cpp  NonlinearElasticVarForm.cpp  ScalarVarForm.cpp  ThermoElasticVarForm.cpp  ThermoElasticVarForm.hpp  VarForm.cpp  VarForm.hpp
tests/: CMakeLists.txt  contact_3d.txt  miso.txt  old_tolerances.txt  standard.txt  test_assembler.cpp  test_bases.cpp  test_cmesh.cpp  test_form_derivatives.cpp  test_geometry_utils.cpp  test_jacobian.cpp  test_navier_stokes_forms.cpp  test_opt.cpp  test_problem.cpp  test_time_integrators.cpp  test_utils.cpp  thermo.txt  verify_run.cpp
